statum-macros/tests/ui/invalid_transition_unknown_return_state.stderr
error: Error: transition target `Ghost` is not a variant of the machine's linked `#[state]` family.
  --> tests/ui/invalid_transition_unknown_return_state.rs:15:1
   |
15 | #[state]
   | ^^^^^^^^
...
26 | #[transition]
   | ------------- in this attribute macro expansion
   |
   = note: this error originates in the macro `__statum_resolve_state_target` which comes from the expansion of the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Ghost: StateTrait` is not satisfied
  --> tests/ui/invalid_transition_unknown_return_state.rs:28:26
   |
28 |     fn to_ghost(self) -> Machine<Ghost> {
   |                          ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StateTrait` is not implemented for `Ghost`
  --> tests/ui/invalid_transition_unknown_return_state.rs:24:1
   |
24 | struct Ghost;
   | ^^^^^^^^^^^^
help: the following other types implement trait `StateTrait`
  --> tests/ui/invalid_transition_unknown_return_state.rs:15:1
   |
15 | #[state]
   | ^^^^^^^^
   | |
   | `A`
   | `B`
   | `UninitializedState`
note: required by a bound in `Machine`
  --> tests/ui/invalid_transition_unknown_return_state.rs:21:1
   |
21 | #[machine]
   | ^^^^^^^^^^ required by this bound in `Machine`
   = note: this error originates in the attribute macro `state` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant or associated item named `Ghost` found for enum `StateId` in the current scope
  --> tests/ui/invalid_transition_unknown_return_state.rs:26:1
   |
21 | #[machine]
   | ---------- variant or associated item `Ghost` not found for this enum
...
26 | #[transition]
   | ^^^^^^^^^^^^^ variant or associated item not found in `StateId`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `transition` exists for struct `Machine<A>`, but its trait bounds were not satisfied
  --> tests/ui/invalid_transition_unknown_return_state.rs:29:14
   |
21 | #[machine]
   | ---------- method `transition` not found for this struct because it doesn't satisfy `Machine<A>: EdgeTo<_>` or `Machine<A>: TransitionTo<_>`
...
29 |         self.transition()
   |              ^^^^^^^^^^
   |
note: trait bound `Machine<A>: EdgeTo<_>` was not satisfied
  --> tests/ui/invalid_transition_unknown_return_state.rs:21:1
   |
21 | #[machine]
   | ^^^^^^^^^^
note: the trait `EdgeTo` must be implemented
  --> tests/ui/invalid_transition_unknown_return_state.rs:21:1
   |
21 | #[machine]
   | ^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
note: `TransitionTo` defines an item `transition`, perhaps you need to implement it
  --> tests/ui/invalid_transition_unknown_return_state.rs:21:1
   |
21 | #[machine]
   | ^^^^^^^^^^
   = note: this error originates in the macro `__statum_emit_machine_from_state_family` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
